<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_el"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editarlugar_localizacion" />

        <EditText
            android:id="@+id/et_el_nombre"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editarlugar_descripcion" />

        <EditText
            android:id="@+id/et_el_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/crud_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal" >

            <Button
                android:id="@+id/bt_crud_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crudname_save" />

            <Button
                android:id="@+id/bt_crud_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crudname_delete" />

        </TableRow>

    </TableLayout>

</LinearLayout>